feat: adding gdpr compliance

--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,7 @@ seo:
   default_image: /assets/images/default-og-image.png
   twitter:
     username: ploid
+
+# Analytics
+analytics:
+  google: G-41YFF2XT43
