--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Ploid is revolutionizing biotechnology with cutting-edge AI solutions.
 baseurl: "" # the subpath
 url: "https://ploid.ai" # the base hostname & protocol
+icon: /assets/images/logo.svg
 
 # Configurations
 permalink: pretty
